--- a/style/multisweeper.css
+++ b/style/multisweeper.css
@@ -14,7 +14,11 @@ body, html {
 }
 
 canvas {
-	cursor: pointer;	
+	position: relative;
+	cursor: pointer;
+	top: 50%;	
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
 
 .hidden {
