Added real background to canvas area. Added vertical offset to minefield to better position it inside of the canvas.

--- a/style/multisweeper.css
+++ b/style/multisweeper.css
@@ -32,6 +32,8 @@ canvas {
 	left: 0px;
 	width: 100%;
 	height: calc(100% - 40px);
+	background-image: url("../images/loadingbg.png");
+	background-repeat: repeat;
 }
 
 /*
