Moved the submit button from the orders tab to the bottom bar itself. The orders tab has been completely removed.

--- a/style/multisweeper.css
+++ b/style/multisweeper.css
@@ -91,9 +91,10 @@ canvas {
 }
 
 .barIcon {
-	position: relative;
+	position: absolute;
 	left: -100%;
 	transition: left 1s ease-in-out;
+	display: inline-block;
 }
 
 /*
