--- a/style/multisweeper.css
+++ b/style/multisweeper.css
@@ -178,3 +178,16 @@ canvas {
 #loadingScreen.doneLoading {
 	top: -100%;
 }
+
+/*
+	Loading Icon
+*/
+#loadingIcon {
+	position: absolute;
+	width: 50px;
+	height: 50px;
+	top: -50px;
+	left: 10px;
+	z-index: 90;
+	transition: top 0.5s ease-in-out;
+}
